# poocho-rag-projects

./: main.py  pyproject.toml  reset_everything.ipynb  scratch.ipynb
transcript_manager/core/: database.py  models.py
transcript_manager/data/: transcripts.db
transcript_manager/services/: project.py  transcript.py
