[tool.poetry]
name = "poocho-rag-projects"
version = "0.1.0"
description = ""
authors = ["aakarsh <aakarsh@poocho.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.36"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
